# fomws2025aud

./: Dockerfile  LICENSE  README.md
src/: CMakeLists.txt
src/helloworlds/: CMakeLists.txt
src/uebungen/: 01_04b.c  01_05d.c  CMakeLists.txt
